--- a/package.json
+++ b/package.json
@@ -27,15 +27,19 @@
   ],
   "exports": {
     ".": {
-      "import": "./dist/my-react-plugin.es.js",
-      "require": "./dist/my-react-plugin.umd.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.d.ts"
+    },
+    "./DataTable": {
+      "import": "./dist/components/DataTable.js",
+      "types": "./dist/components/DataTable.d.ts"
     }
   },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "clean": "rm -rf dist tsconfig.tsbuildinfo",
+    "build": "npm run clean && tsc --project tsconfig.build.json && vite build",
+    "typecheck": "tsc --emitDeclarationOnly",
+    "build:types": "tsc --emitDeclarationOnly"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -56,6 +60,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "tsup": "^8.5.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
